# Miniflame

./: main.py  model_handler.py  pasted_text_1725862800473.txt  pyproject.toml  replit.nix  slack_integration.py
static/css/: style.css
static/js/: app.js
templates/: index.html
